# athlete-detection-project

./: CMakeLists.txt  README.md  commons.h  main.cpp  processingdata.cpp  processingdata.h
